--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,12 @@ name = "pypi"
 django = "*"
 djangorestframework = "*"
 python-dotenv = "*"
+mysqlclient = "*"
+pyyaml = "*"
+uritemplate = "*"
+drf-spectacular = "*"
+django-debug-toolbar = "*"
+djoser = "*"
 
 [dev-packages]
 
